# dotfiles

./: .gitignore  README.md  deploy
dotfiles/: .dircolors  .gitconfig  .mbsyncrc  .msmtprc  .offlineimap.py  .offlineimaprc  .profile  .xinitrc  .xmobarrc  .zathurarc
dotfiles/.bin/: bell  brightness  ezmon  hotplug-monitor  password-store  pulsevolume  pymodoro  scylla  toggle_bluetooth  toggle_screensaver  toggle_touchpad
dotfiles/.config/: user-dirs.dirs
dotfiles/.config/doom/: +bindings.el  +email.el  README.md  config.el  init.el  keychain-environment.el  my-bindings.el  my-mail.el  tmp.el
dotfiles/.config/fish/: config.fish
dotfiles/.config/fish/conf.d/: omf.fish
dotfiles/.config/fish/functions/: cls.fish  fish_prompt.fish  hgrep.fish  start-keychain  start-keychain.fish
dotfiles/.config/git/: config
dotfiles/.config/systemd/user/: emacs.service  unclutter.service
dotfiles/.config/taffybar/: old  taffybar.css  taffybar.hs
dotfiles/.config/termite/: config
dotfiles/.ghc/: ghci.conf  ghci_history
dotfiles/.spacemacs.d/: custom.el  init.el
dotfiles/.spacemacs.d/layers/config/: funcs.el  layers.el  packages.el
dotfiles/.spacemacs.d/layers/macros/: funcs.el  packages.el
dotfiles/.spacemacs.d/layers/my-exwm/: funcs.el  keybindings.el  layers.el  packages.el  packages.el~
dotfiles/.spacemacs.d/local/: notes.org
dotfiles/.spacemacs.d/local/my-gtd/: README.org  packages.el
dotfiles/.xmonad/: build  build.bak  my-xmonad.cabal  shell.nix  stack.yaml  xmonad-x86_64-linux  xmonad.hi  xmonad.hs  xmonad.state
(+8 files in other folders)
