name:                my-xmonad
version:             0.0.0.0
license:             BSD3
build-type:          Simple
cabal-version:       >=1.10

executable my-xmonad
  main-is:             ../xmonad.hs
  build-depends:       base
                     , containers
                     , data-default
                     , mtl
                     , process
                     , unix
                     , X11
                     , xmonad >= 0.14
                     , xmonad-contrib >= 0.14
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
